// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseError should capture the stacktrace if given an Error 1`] = `
"Error: Unparseable
    at Object.<anonymous>.test (/Users/iwalter/ianwalter/base-error/tests/base-error.test.js:17:11)
    at Object.asyncJestTest (/Users/iwalter/ianwalter/base-error/node_modules/jest-jasmine2/build/jasmine_async.js:108:37)
    at resolve (/Users/iwalter/ianwalter/base-error/node_modules/jest-jasmine2/build/queue_runner.js:56:12)
    at new Promise (<anonymous>)
    at mapper (/Users/iwalter/ianwalter/base-error/node_modules/jest-jasmine2/build/queue_runner.js:43:19)
    at promise.then (/Users/iwalter/ianwalter/base-error/node_modules/jest-jasmine2/build/queue_runner.js:87:41)
    at process._tickCallback (internal/process/next_tick.js:68:7)"
`;

exports[`BaseError should create a stacktrace if given a string 1`] = `
"BaseError: Undefined
    at Object.<anonymous>.test (/Users/iwalter/ianwalter/base-error/tests/base-error.test.js:25:17)
    at Object.asyncJestTest (/Users/iwalter/ianwalter/base-error/node_modules/jest-jasmine2/build/jasmine_async.js:108:37)
    at resolve (/Users/iwalter/ianwalter/base-error/node_modules/jest-jasmine2/build/queue_runner.js:56:12)
    at new Promise (<anonymous>)
    at mapper (/Users/iwalter/ianwalter/base-error/node_modules/jest-jasmine2/build/queue_runner.js:43:19)
    at promise.then (/Users/iwalter/ianwalter/base-error/node_modules/jest-jasmine2/build/queue_runner.js:87:41)
    at process._tickCallback (internal/process/next_tick.js:68:7)"
`;
